# audacity

./: .cirrus.yml  .clang-format  .cvsignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  BUILDING.md  CHANGELOG.txt  CMAKE_OPTIONS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONSTRUIRENENESPANOL.md  CONTRIBUTING.md  DEVELOPER_DOCS.md  Directory.Build.props  INSTALL  INSTALL.txt  Jenkinsfile  LICENSE  LICENSE.txt  Makefile.am  Makefile.in  PULL_REQUEST_TEMPLATE.md  README.md  README.txt  RemoveDCOffset.cpp  RemoveDCOffset.h  SetupConfigure.cmake  TimeStretchingWaveClip.md  appveyor.yml  audacity-beginner-tutorial.txt  audacity.dox  audacity.dox.in  autogen.sh  branches.txt  ci_build.bat  (+18 more)
Audacity_2_0_6/tests/: Makefile.am  Makefile.in  SequenceTest.cpp
au3/crashreporter/: CMakeLists.txt  CrashReportApp.cpp  warning.xpm
au3/libraries/: CMakeLists.txt
au3/modules/: CMakeLists.txt
au3/nyquist/: CMakeLists.txt  envelopes.lsp  evalenv.lsp  fileio.lsp  misc.lsp  nyinit.lsp  nyqmisc.lsp  printrec.lsp  sal.lsp  seqmidi.lsp  system.lsp  test.lsp  upic.sal  xm.lsp
au3/plug-ins/: CMakeLists.txt  ShelfFilter.ny  SpectralEditShelves.ny  StudioFadeOut.ny  beat.ny  clipfix.ny  crossfadeclips.ny  delay.ny  equalabel.ny  label-sounds.ny  legacy-limiter.ny  lowpass.ny  notch.ny  nyquist-plug-in-installer.ny  pluck.ny  rhythmtrack.ny  rissetdrum.ny  sample-data-export.ny  sample-data-import.ny  spectral-delete.ny  tremolo.ny  vocoder.ny
au4/: .gitignore  BUILDING.md  CMakeLists.txt  SetupConfigure.cmake  ci_build.cmake  version.cmake
au4/buildscripts/: .gitignore
au4/src/: CMakeLists.txt
cmake-proxies/: CMakeLists.txt  README.txt
cmake-proxies/FileDialog/: CMakeLists.txt
cmake-proxies/cmake-modules/: AudacityCodeSigning.cmake  AudacityDependencies.cmake  AudacityFunctions.cmake  AudacityInnoSetup.cmake  AudacityQt5.cmake  AudacityTesting.cmake  CopyLibs.cmake  CopySourceVariables.cmake  DependenciesList.cmake  FindJACK.cmake  FindPortAudio.cmake  FindPortMidi.cmake  Findlibid3tag.cmake  Findlibmad.cmake  Findlibmp3lame.cmake  Findlibuuid.cmake  Findopusfile.cmake  Findvst3sdk.cmake  FindwxWidgets.cmake  MacOSXBundleInfo.plist.in  Package.cmake  SneedacityCodeSigning.cmake  SneedacityDependencies.cmake  SneedacityFunctions.cmake  Version.cmake  conan.cmake  cotire.cmake
cmake-proxies/expat/: CMakeLists.txt
cmake-proxies/ffmpeg/: CMakeLists.txt
cmake-proxies/ladspa-plugins/: CMakeLists.txt  README  ladspa-util.h  ladspa.h  sc4_1882.c
cmake-proxies/lame/: CMakeLists.txt  config.h.in  lame.h.in
cmake-proxies/lib-widget-extra/: CMakeLists.txt  config.h.in
cmake-proxies/libcurl/: CMakeLists.txt
cmake-proxies/libflac/: CMakeLists.txt  config.h.in
cmake-proxies/libflac++/: CMakeLists.txt
cmake-proxies/libid3tag/: CMakeLists.txt  config.h.in
cmake-proxies/libmad/: CMakeLists.txt  config.h.in  mad.h.in
crashreports/: BreakpadConfigurer.h  CMakeLists.txt
deeplearning-models/: CMakeLists.txt  modelcard-schema.json  resampler.pt
help/: .cvsignore  CMakeLists.txt  DownloadManual.cmake  Makefile.in  audacity.1  audacity.appdata.xml  meson.build  org.audacityteam.Audacity.appdata.xml  sneedacity.1  sneedacity.appdata.xml
images/: .cvsignore  ACE.jpg.h  ACE.xpm  Aqua.xpm  Arrow.xpm  Arrow15x15.xpm  Audacity-splash.xpm  Audacity36.xpm  Audacity40Promo.h  Audacity40Video.h  Audacity4Release.h  AudacityFeatureSurvey.h  AudacityLogo.xpm  AudacityLogo48x48.xpm  AudacityLogoAlpha.xpm  AudacityLogoWithName.xpm  AudacityMerchStore.h  AudacityPromo.h  Audacity_3.7.2_Thumb.jpg.h  AudioDotComPromo.h  AudioDotComPromoDark.h  AudioDotComPromoLight.h  CMakeLists.txt  Checked.xpm  Cloud.xpm  Cloud_low_res.xpm  CompleteAudioComSetup.xpm  Cursors.h  DarkAudacityLogoWithName.xpm  DarkSneedacityLogoWithName.xpm  EditButtons.h  Effect.h  Empty9x16.xpm  GlyphImages.h  Help.xpm  Makefile.am  Makefile.in  MicMenu.xpm  MixerImages.h  MuseHub.jpeg.h  (+27 more)
images/Aqua/: Down.xpm  (+13 more)
lib-src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  audacity-patches.txt  dist-libvamp.mk  dist-portaudio.mk  sneedacity-patches.txt
libraries/: CMakeLists.txt
locale/: .cvsignore  CMakeLists.txt  CeePlusPlusifyLanguageNames.pl  LINGUAS  LanguageNames.h  LanguageNames.txt  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  add_nyquist_to_pot.sh  af.po  ar.po  audacity.pot  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  ca_ES@valencia.po  co.po  cs.po  cy.po  da.po  de.po  diagnostics.sh  el.po  en.po  en_GB.po  es.po  et.po  eu.po  eu_ES.po  fa.po  fi.po  fil.po  find-duplicates.pl  fr.po  ga.po  (+52 more)
modules/: CMakeLists.txt
plug-ins/: CMakeLists.txt  ExportLabel2Subtitle.ny  ShelfFilter.ny  SilenceMarker.ny  SoundFinder.ny  SpectralEditMulti.ny  SpectralEditParametricEQ.ny  SpectralEditShelves.ny  StudioFadeOut.ny  adjustable-fade.ny  analyze.ny  beat.ny  clicktrack.ny  clipfix.ny  crossfadeclips.ny  crossfadein.ny  crossfadeout.ny  crossfadetracks.ny  custom-dtmf.ny  delay.ny  eq-xml-to-txt-converter.ny  equalabel.ny  highpass.ny  label-sounds.ny  limiter.ny  lowpass.ny  noisegate.ny  notch.ny  nyquist-plug-in-installer.ny  one-click-fade.ny  pluck.ny  rhythmtrack.ny  rissetdrum.ny  rms.ny  sample-data-export.ny  sample-data-import.ny  spectral-delete.ny  tremolo.ny  vocalrediso.ny  vocalremover.ny  (+1 more)
share/: CMakeLists.txt
src/: .cvsignore  AColor.cpp  AColor.h  AColorResources.h  AILA.cpp  AILA.h  AboutDialog.cpp  AboutDialog.h  AboutDialogGPLv2Text.cpp  AboutDialogGPLv3Text.cpp  ActiveProject.cpp  ActiveProject.h  ActiveProjects.cpp  ActiveProjects.h  AdornedRulerPanel.cpp  AdornedRulerPanel.h  AllThemeResources.cpp  AllThemeResources.h  AnalyzedWaveClip.cpp  AnalyzedWaveClip.h  AttachedVirtualFunction.h  Audacity.h  AudacityApp.cpp  AudacityApp.h  AudacityApp.mm  AudacityException.cpp  AudacityException.h  AudacityFileConfig.cpp  AudacityFileConfig.h  AudacityHeaders.cpp  AudacityHeaders.h  AudacityHeaders.h.in  AudacityLogger.cpp  AudacityLogger.h  AudacityMirProject.cpp  AudacityMirProject.h  AudioIO.cpp  AudioIO.h  AudioIOBase.cpp  AudioIOBase.h  (+452 more)
(+22254 files in other folders)
